2009-10-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c (init_timer): connect the signal handlers for the
	project_started and project_stoped signals of the
	GttRunningProjects object.
	(timer_project_stoped_handler, timer_project_started_handler):
	handlers for the GttRunningProjects signals. Start or stop themain
	timer according to the recieved signals and current number of
	running projects.

2009-10-28  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/active-dialog.c, src/active-dialog.h, src/app.c, src/app.h,
	src/cur-proj.h, src/file-io.c, src/file-io.h, src/gconf-io.c,
	src/gconf-io.h, src/idle-dialog.c, src/idle-dialog.h, src/log.c,
	src/main.c, src/menucmd.c/ src/timer.c, src/timer.h: Initial
	changes to use the running-projects module instead of the global
	"cur_proj" variable.

	* src/running-projects.c, src/running-projects.h: Implemented
	module to keep track of the set of running projects.

2009-09-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/proj.h, src/proj.c (gtt_project_cmp), src/projects-tree.c:
	moved the project_cmp function from the projects-tree.c to
	the proj.c module.

2009-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_visible_columns):
	Check that the column_references tree is not NULL before calling
	g_tree_destroy.

2009-09-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_expander_state):
	return without any further processing if states is NULL.

	* src/file-io.c (gtt_post_ctree_config): don't call
	gtt_projects_tree_set_expander_state when the expander state is
	NULL.

2009-06-29  Goedson Teixeira Paixao  <goedson@debian.org>

	* ghtml/C/gtt.scm: Set unlimited guile stack (Fixes #1402562)

	* src/ghtml.c (gtt_ghtml_new): properly initialize guile
	environment.

2009-05-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c (task_get_blocktime_str_scm): substitute the usage